force-app/main/default/objects/SBQQ__QuoteLine__c/fields/accountLookupTest__c.field-meta.xml
<CustomField>
    <fullName>accountLookupTest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Y</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Lines (Account)</relationshipLabel>
    <relationshipName>Quote_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>