force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV_Total_Price_Stamp__c.field-meta.xml
<CustomField>
    <fullName>ACV_Total_Price_Stamp__c</fullName>
    <label>ACV Total Price Stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>