force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Total__c</fullName>
    <description>Populated by price rule. Created as part of GTMS-6087</description>
    <label>Annual Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>