force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Contract_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contract_Line_Id__c</fullName>
    <description>GTMS-27157</description>
    <label>Billing Contract Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>