force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Created_From_Quote__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Quote</label>
    <type>Checkbox</type>
</CustomField>