force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delta_ACV_Roll_Up_Total__c.field-meta.xml
<CustomField>
    <fullName>Delta_ACV_Roll_Up_Total__c</fullName>
    <description>Populated by QCP. Created as part of GTMS-6087</description>
    <label>Delta ACV Roll Up Total [Deprecated]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>