force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Existing_Product__c.field-meta.xml
<CustomField>
    <fullName>Existing_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-26404</description>
    <label>Existing Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Lines (Existing Product)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>