force-app/main/default/objects/SBQQ__QuoteLine__c/fields/HW_AG24_Alacarte__c.field-meta.xml
<CustomField>
    <fullName>HW_AG24_Alacarte__c</fullName>
    <formula>CONTAINS(SBQQ__ProductCode__c, &quot;HW-AG24&quot;) &amp;&amp;  ISBLANK(SBQQ__RequiredBy__c)</formula>
    <label>HW-AG24 Alacarte</label>
    <type>Checkbox</type>
</CustomField>