force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_an_Accessory__c.field-meta.xml
<CustomField>
    <fullName>Is_an_Accessory__c</fullName>
    <formula>OR(BEGINS(SBQQ__ProductCode__c, &quot;ELOG&quot;),BEGINS(SBQQ__ProductCode__c, &quot;CBL&quot;),AND(BEGINS(SBQQ__ProductCode__c, &quot;ACC-&quot;),NOT(CONTAINS(SBQQ__ProductCode__c, &quot;ACC-DRIVERID&quot;))),BEGINS(SBQQ__ProductCode__c, &quot;SHRT&quot;),BEGINS(SBQQ__ProductCode__c, &quot;WELCOME&quot;),BEGINS(SBQQ__ProductCode__c, &quot;EXPRESS-WELCOME&quot;),BEGINS(SBQQ__ProductCode__c, &quot;FREE-TRIAL&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is an Accessory ?</label>
    <type>Checkbox</type>
</CustomField>