force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LineItem_type__c.field-meta.xml
<CustomField>
    <fullName>LineItem_type__c</fullName>
    <formula>/*IF(SBQQ__RenewedSubscription__c != null, IF(Sub_Quantity__c &gt; SBQQ__Quantity__c, &apos;Downsell&apos;, null), &apos;Upsell&apos;)

IF(CONTAINS(SBQQ__ProductCode__c, &apos;LIC&apos;), IF(SBQQ__UpgradedSubscription__c != null,&apos;Amended Line&apos;,
IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c &gt; SBQQ__Quantity__c, &apos;Downsell&apos;,
IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c &lt; SBQQ__Quantity__c, &apos;Upsell&apos;,
IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c = SBQQ__Quantity__c, &apos;Renewed line&apos;,
IF(SBQQ__RenewedSubscription__c == null &amp;&amp; SBQQ__UpgradedSubscription__c == null, &apos;Upsell&apos;, null
))))), null)*/


IF(CONTAINS(SBQQ__ProductCode__c, &apos;LIC&apos;), IF(SBQQ__UpgradedSubscription__c != null,&apos;Amended Line&apos;,
IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c &gt; SBQQ__Quantity__c, &apos;Downsell&apos;,
IF(SBQQ__RenewedSubscription__c != null , &apos;Renewed line&apos;,
IF(Upgraded_QL__c != null &amp;&amp; Quantity_Upgraded__c &gt; 0 &amp;&amp; Monthly_Unit_Price__c&gt;Upgraded_QL__r.Monthly_Unit_Price__c, &apos;Upgrade&apos;, 
IF(Upgraded_QL__c != null &amp;&amp; Quantity_Upgraded__c &gt; 0 &amp;&amp; Monthly_Unit_Price__c&lt;Upgraded_QL__r.Monthly_Unit_Price__c, &apos;Downgrade&apos;,
IF(SBQQ__RenewedSubscription__c == null &amp;&amp; SBQQ__UpgradedSubscription__c == null, &apos;Upsell&apos;,
null
)))))),null)</formula>
    <label>Line Item Type</label>
    <type>Text</type>
</CustomField>