force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price__c</fullName>
    <description>Used to display on QLE layout, locking the field so reps can&apos;t directly edit the price.</description>
    <formula>SBQQ__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>