force-app/main/default/objects/SBQQ__QuoteLine__c/fields/One_Time__c.field-meta.xml
<CustomField>
    <fullName>One_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for GTMS-6824</description>
    <inlineHelpText>Indicates if the subsidy will be issued as a one-time subsidy or a recurring subsidy.</inlineHelpText>
    <label>One Time</label>
    <type>Checkbox</type>
</CustomField>