force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_FT_Oppty_Line_Item_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_FT_Oppty_Line_Item_SF_Id__c</fullName>
    <externalId>true</externalId>
    <label>Original FT Oppty Line Item SF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>