force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quantity__c</fullName>
    <description>Captures the previous quantity during Renewals for renewed subscription products</description>
    <inlineHelpText>Captures the previous quantity during Renewals for renewed subscription products</inlineHelpText>
    <label>Previous Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>