force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prior_OppId__c.field-meta.xml
<CustomField>
    <fullName>Prior_OppId__c</fullName>
    <description>Captures the prior oppId from the original deal. This field is twinned from Subscription.</description>
    <inlineHelpText>Captures the prior oppId from the original deal. This field is twinned from Subscription.</inlineHelpText>
    <label>Prior OppId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>