force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prior_QuoteLineId__c.field-meta.xml
<CustomField>
    <fullName>Prior_QuoteLineId__c</fullName>
    <description>This field will be used by Mulesoft to find the unique quote line for remorse refund process.</description>
    <formula>CASESAFEID(SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior QuoteLineId</label>
    <type>Text</type>
</CustomField>