force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Code_Copy__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Copy__c</fullName>
    <description>Copy of Product Code to enable roll-up summaries etc.</description>
    <label>Product Code Copy</label>
    <length>65</length>
    <type>Text</type>
</CustomField>