force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Commissionable_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Commissionable_Type__c</fullName>
    <formula>SBQQ__Product__r.Commissionable_Type__c</formula>
    <label>Product Commissionable Type</label>
    <type>Checkbox</type>
</CustomField>