force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ProductFamily_LicenseType__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily_LicenseType__c</fullName>
    <formula>SBQQ__ProductFamily__c+&apos;-&apos;+License_Type__c</formula>
    <label>Product Family License Type</label>
    <type>Text</type>
</CustomField>