force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_Multiples_ten__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Multiples_ten__c</fullName>
    <formula>If(OR(SBQQ__ProductCode__c =&apos;HW-AT11&apos;,SBQQ__ProductCode__c =&apos;HW-AT11X&apos;),If(MOD(SBQQ__Quantity__c,10)&lt;&gt;0,true, false),false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Multiples ten</label>
    <type>Checkbox</type>
</CustomField>