force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_LineItem_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_LineItem_Type__c</fullName>
    <description>Pulling and persisting the renewal QL value of LineItem Type for twinning to its contracted Subscription.
Created as part of GTMS-6087 &amp; GTMS-6088</description>
    <formula>/* IF(ISBLANK(TEXT(LineItem_Type_Override__c)), LineItem_type__c, TEXT(LineItem_Type_Override__c)). */


IF(
  ISBLANK(TEXT(LineItem_Type_Override__c)), 
    IF(ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Amendment&apos;), 
      IF(CONTAINS(SBQQ__ProductCode__c, &apos;LIC&apos;), 
          IF(SBQQ__UpgradedSubscription__c != null, SBQQ__UpgradedSubscription__r.Original_LineItem_Type__c
        ,&apos;Upsell&apos;)
    ,null)

  ,IF(CONTAINS(SBQQ__ProductCode__c, &apos;LIC&apos;), 
      IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c &gt; SBQQ__Quantity__c, &apos;Downsell&apos;
        ,IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c &lt; SBQQ__Quantity__c, &apos;Upsell&apos;
          ,IF(SBQQ__RenewedSubscription__c != null &amp;&amp; Previous_Quantity__c = SBQQ__Quantity__c, &apos;Renewed line&apos;
              ,IF(SBQQ__RenewedSubscription__c == null &amp;&amp; SBQQ__UpgradedSubscription__c == null, &apos;Upsell&apos;
                  ,null
                  ))))
  ,null)
)
,TEXT(LineItem_Type_Override__c)
)</formula>
    <label>Renewal LineItem Type</label>
    <type>Text</type>
</CustomField>