force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewed_Line__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Line__c</fullName>
    <formula>IF(OR(AND(SBQQ__UpgradedSubscription__r.Renewed_line__c != false, SBQQ__Quote__r.Associated_Opportunity_Type__c == &apos;Remorse Refund&apos;), AND(SBQQ__Quote__r.Associated_Opportunity_Type__c == &apos;Revenue Opportunity&apos;, SBQQ__RenewedSubscription__c != null)),true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Line</label>
    <type>Checkbox</type>
</CustomField>