force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.Reseller__r.X18_Digit_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller</label>
    <type>Text</type>
</CustomField>