force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Safety_Event_Review__c.field-meta.xml
<CustomField>
    <fullName>Safety_Event_Review__c</fullName>
    <formula>IF(SBQQ__ProductCode__c = &quot;LIC-SVC-CM-Review-ENT&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Event Review?</label>
    <type>Checkbox</type>
</CustomField>