force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Semi_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Semi_Annual_Price__c</fullName>
    <formula>/*Total_Monthly_Price__c * 6*/

  Semi_Annual_Unit_Price__c *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semi-Annual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>