force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>added for GTMS-6824</description>
    <inlineHelpText>The total dollar amount or percentage that will be subsidized per unit</inlineHelpText>
    <label>Subsidy Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>