force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subsidy_Method__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Method__c</fullName>
    <description>added for GTMS-6824</description>
    <inlineHelpText>Used to identify if the customer’s subsidy is calculated as a percentage of their total Balance Due (including tax and S&amp;H) or if it is a fixed dollar amount.</inlineHelpText>
    <label>Subsidy Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Fixed $</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>