force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Taxpayer_Code__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Code__c</fullName>
    <label>Taxpayer Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>