force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Price__c</fullName>
    <description>total annual price</description>
    <formula>Round(
IF(ISPICKVAL(SBQQ__Quote__r.Configuration_Segment__c,&quot;Express&quot;),
 IF(SBQQ__Quote__r.Renewal__c , (SBQQ__NetPrice__c * 12/SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) , 
   ((SBQQ__NetPrice__c * 12/SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) * 90/100)) ,

IF(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c &lt; 12, SBQQ__NetPrice__c , 
(SBQQ__NetPrice__c * 12/SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) )) *
IF(OR(ISPICKVAL(SBQQ__Quote__r.SBQQ__Opportunity2__r.Type ,&apos;Remorse Refund&apos;),ISPICKVAL(SBQQ__Quote__r.SBQQ__Opportunity2__r.Type ,&apos;Rebate&apos;)) &amp;&amp; CreatedDate &gt;= DATETIMEVALUE(&quot;2024-11-03 00:00:00&quot;) ,
 SBQQ__EffectiveQuantity__c , SBQQ__Quantity__c)
,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>