force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Total_Subsidy__c</fullName>
    <defaultValue>0</defaultValue>
    <description>type change from formula to number GTMS-7328</description>
    <label>Total Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>