force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Subsidy_Calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Subsidy_Calc__c</fullName>
    <description>added for GTMS-7328</description>
    <formula>IF(ISPICKVAL(Subsidy_Method__c, &apos;Fixed $&apos;), (Subsidy_Amount__c * Subsidy_Quantity__c) * (-1) , IF(ISPICKVAL(Subsidy_Method__c, &apos;Percentage&apos;), (Subsidy_Amount__c/100) * SBQQ__Quote__r.Balance_Due__c * (-1), 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Subsidy Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>