force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Weight_oz__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_oz__c</fullName>
    <formula>ABS( SBQQ__Product__r.Weight_oz__c *  SBQQ__Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight (oz)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>