force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Upgraded_QL__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_QL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the QL Number in the QLE that the net new line is upgrading/downgrading from.
Created as part of GTMS-6087</description>
    <label>Upgraded/Downgraded QL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Quote__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Quote__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Lines (Upgraded QL)</relationshipLabel>
    <relationshipName>Quote_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>