force-app/main/default/objects/SBQQ__QuoteLine__c/fields/VertexCPQ__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>VertexCPQ__Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>