force-app/main/default/objects/SBQQ__QuoteLine__c/fields/VertexCPQ__Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>VertexCPQ__Tax_Status__c</fullName>
    <description>Tax Status from Vertex Tax Solutions</description>
    <label>Tax Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>