force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Additional_discount_percent_or_amount_UM.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_discount_percent_or_amount_UM</fullName>
    <active>true</active>
    <description>Validates additional discount is specified as a percentage or absolute amount but not both.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__Discount__c)), 
NOT(ISBLANK(SBQQ__AdditionalDiscountAmount__c)),
NOT(SBQQ__Incomplete__c),
NOT(CONTAINS($Label.Corpweb_SFDC_Robot, $User.X18_Digit_User_ID__c)))</errorConditionFormula>
    <errorMessage>You may not specify additional discount as both percentage and absolute amount.</errorMessage>
</ValidationRule>