force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cant_Update_Approved_Quote_Lines.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Update_Approved_Quote_Lines</fullName>
    <active>false</active>
    <description>Prevents AE from updating amount-affecting fields after quote has been approved</description>
    <errorConditionFormula>AND(
 ISPICKVAL(SBQQ__Quote__r.SBQQ__Status__c,&quot;Approved&quot;),
 OR(
  ISCHANGED(SBQQ__Quantity__c),
  ISCHANGED(SBQQ__NetPrice__c),
  ISCHANGED(SBQQ__AdditionalDiscount__c),
  ISCHANGED(SBQQ__NetTotal__c)
 )
)</errorConditionFormula>
    <errorMessage>Edits impacting quote amount may not be made after quote is approved. Please create a new quote if you need to make changes.</errorMessage>
</ValidationRule>