force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Quantity_Must_Be_Whole_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Whole_Number</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR( SBQQ__Quantity__c ) &lt;&gt;  SBQQ__Quantity__c</errorConditionFormula>
    <errorMessage>Quote Line Error: Quantity must be a whole number</errorMessage>
</ValidationRule>